--- a/src/assets/styles/login.css
+++ b/src/assets/styles/login.css
@@ -72,6 +72,9 @@ input[type=checkbox], input[type=email], input[type=number], input[type=password
     color: #444;
     background: #f2f2f2;
 }
+.login_btn:hover,.regist_btn:hover{
+    cursor: pointer;
+}
 .login_btn,.regist_btn {
     width: 100%;
     font-size: 22px;
@@ -81,6 +84,17 @@ input[type=checkbox], input[type=email], input[type=number], input[type=password
 }
 .login_show .login_btn {
     display: inline-block;
+    background: #04BE02;
+    color: #fff;
+    border: 0;
+    border-radius: 3px;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    white-space: nowrap;
+}
+.login_show .regist_btn {
+    display: inline-block;
     background: #ff5777;
     color: #fff;
     border: 0;
@@ -89,4 +103,10 @@ input[type=checkbox], input[type=email], input[type=number], input[type=password
     text-decoration: none;
     vertical-align: middle;
     white-space: nowrap;
+}
+.login_cancas{
+	position: absolute;
+    right: 20%;
+    width: 300px;
+    height: 500px;
 }
