--- a/src/assets/styles/chatlist.css
+++ b/src/assets/styles/chatlist.css
@@ -53,6 +53,12 @@
   cursor: default;
 }
 
+.thread-img{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
 .message-author-name,
 .thread-name {
   color: #66c;
