增加用户信息表数据
增加用户信息表数据

--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -17,7 +17,13 @@ ul,p {
 
 
 
-
+.bp_frame_left{
+    display: inline-block;
+    letter-spacing: normal;
+    word-spacing: normal;
+    vertical-align: top;
+    font-size: 12px;
+}
 .bp_func {
     text-align: center;
 }
