--- a/src/assets/styles/chat.css
+++ b/src/assets/styles/chat.css
@@ -1,6 +1,7 @@
 .bp_chat {
   position: absolute;
   height: 402px;
+  width: 560px;
   background: #fff;
   box-shadow: -3px -2px 8px -1px rgba(0,0,0,0.2);
   border-radius: 2px 0px 0px 2px;
